# tempESP

./: makefile  notes.md  vncnotes
gen_figs/: gen_figs.py  plot_psd.py
ml_colors/: ml_colors.py
opencv-ml/: CMakeLists.txt  data.csv
opencv-ml/src/: mltest.cpp  opencv-ml.cpp
rtlsdrpp/: CMakeLists.txt  data.txt
rtlsdrpp/include/: rtlsdrpp.hpp
rtlsdrpp/src/: test.cpp
tcp-test/: CMakeLists.txt
tcp-test/src/: cli.cpp  srv.cpp
tempesp-cli/: CMakeLists.txt
tempesp-cli/src/: tempesp_cli.cpp
tempesp-srv/: .gitignore  CMakeLists.txt  traindata.csv
tempesp-srv/include/: constants.hpp  csv.hpp  rtlsdrpp.hpp  simpletcp.hpp  tempesp_srv.hpp
tempesp-srv/src/: tempesp_train.cpp
tempest_for_eliza-1.0.5/: Makefile  config.status  tempest_for_eliza  tempest_for_mp3  xvidtune.txt
tempest_for_eliza-1.0.5/songs/: Makefile  megalovania
